--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -8,7 +8,7 @@ import SkillsList from "../React/SkillsList.tsx";
   <div class="max-w-5xl mx-auto space-y-8 md:py-36 pb-14">
     <div class="text-left space-y-4">
       <p class="text-md md:text-lg text-[var(--white-icon)] shiny-white">
-        Hi, I'm Oscar Hernandez
+        Hola, soy Felipe Acosta
       </p>
       <div
         class="flex flex-col lg:flex-row lg:items-center space-y-4 lg:space-y-0 lg:space-x-8 md:gap-4"
@@ -16,13 +16,13 @@ import SkillsList from "../React/SkillsList.tsx";
         <h1
           class="text-[var(--white)] text-5xl md:text-6xl font-medium text-pretty leading-none"
         >
-          Software <br /> Developer
+          Estudiante de <br /> Ingeniería de Sistemas
         </h1>
         <p class="text-md md:text-2xl text-[var(--white-icon)]">
-          Transforming ideas into interactive and seamless digital experiences
-          with cutting-edge <span class="text-[var(--sec)] shiny-sec"
-            >frontend</span
-          > development.
+          Estudiante de cuarto semestre de Ingeniería de Sistemas, con enfoque en
+           <span class="text-[var(--sec)] shiny-sec"
+            >desarrollo de software</span
+          > , pensamiento lógico y compromiso con la creación de soluciones tecnológicas eficientes, escalables y bien estructuradas.
         </p>
       </div>
       <div class="flex justify-start gap-2 pt-3 md:pt-6">
