--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -50,7 +50,7 @@ const projects: Project[] = [
   class="py-12 border-t border-[#ffffff10] text-[var(--white)]"
 >
   <div class="max-w-5xl mx-auto">
-    <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Bonus</h2>
+    <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Mis</h2>
     <h3 class="text-4xl md:text-5xl font-medium mb-8">Evidencias</h3>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
