Corrección logos footer

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -48,20 +48,14 @@ import LikeButton from "../React/LikeButton.tsx";
               {
                 desc: "Built with",
                 name: "Astro",
-                icon: "/svg/astro.svg",
+                icon: "./svg/astro.svg",
                 alt: "Astro Logo",
               },
               {
                 desc: "Styled with",
                 name: "TailwindCSS",
-                icon: "/svg/tailwindcss.svg",
+                icon: "./svg/tailwindcss.svg",
                 alt: "TailwindCSS Logo",
-              },
-              {
-                desc: "Deployed on",
-                name: "Vercel",
-                icon: "/svg/vercel.svg",
-                alt: "Vercel Logo",
               },
             ].map((tech) => (
               <div class="flex items-center justify-center lg:justify-normal space-x-3">
