--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -75,7 +75,7 @@ const projects: Project[] = [
       <div class="rounded-2xl border border-[var(--white-icon-tr)] bg-[#1414149c] p-6 hover:bg-[var(--white-icon-tr)] transition">
         <h4 class="text-2xl font-semibold mb-2">SQL</h4>
         <p class="text-[var(--white-icon)] text-sm">
-          Consultas, joins y procedimientos almacenados.
+          Creación de bases de datos, tablas y consultas simples.
         </p>
       </div>
 
