--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -84,7 +84,9 @@ import SkillsList from "../React/SkillsList.tsx";
     <LogoWall />
 
     <div class="flex flex-col lg:flex-row items-center gap-8">
+      <section id="presentacion" class="w-full">
       <SkillsList client:load />
+      </section>
       <div
         class="flex justify-center md:w-full md:h-[292px] size-[290px] pt-3 md:pt-9 md:ml-16"
       >
