--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,13 @@ import Home from "@/components/home.astro";
 import Projects from "@/components/projects.astro";
 import Contact from "@/components/contact.astro";
 import Footer from "@/components/footer.astro";
+import Presentacion from "@/components/presentacion.astro";
 ---
 
 <Layout title="Felipe Acosta">
   <Nav />
   <Home />
+  <Presentacion />
   <Projects />
   <Contact />
   <Footer />
