--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,13 +14,14 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Software Developer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta property="og:title" content="Oscar Hernandez" />
-    <meta property="og:description" content="Software Developer" />
-    <meta property="og:image" content="https://oscarhernandez.vercel.app/og.image.png" />
-    <meta property="og:url" content="https://oscarhernandez.vercel.app" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <meta property="og:title" content="Felipe Acosta" />
+    <meta property="og:description" content="Estudiante de Ingeniería de Sistemas | Desarrollo de Software" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://acoss1x.github.io/felipea.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Oscar Hernandez Portfolio" />
+    <meta property="og:site_name" content="Felipe Acosta Portfolio" />
+
 
     <title>{title}</title>
   </head>
