Intento video y foto

--- a/src/components/presentacion.astro
+++ b/src/components/presentacion.astro
@@ -9,7 +9,7 @@ import SkillsList from "../React/SkillsList.tsx";
       <SkillsList
       client:load
       videoUrl="https://www.youtube.com/embed/Q1IRbwqvQxQ"
-      photoUrl="/foto.jpeg"
+      photoUrl="./foto.jpeg"
       />
       <div class="flex justify-center md:w-full md:h-[292px] size-[290px] pt-3 md:pt-9 md:ml-16">
         <LetterGlitch
