--- a/src/components/presentacion.astro
+++ b/src/components/presentacion.astro
@@ -8,8 +8,8 @@ import SkillsList from "../React/SkillsList.tsx";
     <div class="flex flex-col lg:flex-row items-center gap-8">
       <SkillsList
       client:load
-      videoUrl="https://www.youtube.com/embed/Q1IRbwqvQxQ?rel=0&modestbranding=1"
-      photoUrl={new URL("/felipea.github.io/foto.jpeg", Astro.url).toString()}
+      videoUrl="https://www.youtube.com/embed/Q1IRbwqvQxQ"
+      photoUrl="/felipea.github.io/foto.jpeg"
       />
       <div class="flex justify-center md:w-full md:h-[292px] size-[290px] pt-3 md:pt-9 md:ml-16">
         <LetterGlitch
