--- a/src/components/presentacion.astro
+++ b/src/components/presentacion.astro
@@ -7,7 +7,7 @@ import SkillsList from "../React/SkillsList.tsx";
     <div class="w-full">
       <SkillsList
       client:load
-      videoUrl="https://www.youtube.com/embed/Q1IRbwqvQxQ"
+      videoUrl="https://www.youtube.com/embed/eAJ0XAKbNVY"
       photoUrl="/felipea.github.io/foto.jpeg"
       />
     </div>
