--- a/src/components/presentacion.astro
+++ b/src/components/presentacion.astro
@@ -7,7 +7,7 @@ import SkillsList from "../React/SkillsList.tsx";
     <div class="w-full">
       <SkillsList
       client:load
-      videoUrl="https://www.youtube.com/embed/6WeT1Rvz5zwVi"
+      videoUrl="https://youtube.com/embed/6WeT1Rvz5zw"
       photoUrl="/felipea.github.io/foto.jpeg"
       />
     </div>
