--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -57,30 +57,31 @@ const projects: Project[] = [
     <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Mis</h2>
     <h3 class="text-4xl md:text-5xl font-medium mb-8">Evidencias</h3>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div class="flex flex-col gap-8">
 
       <!-- Modelado -->
-<div class="rounded-2xl border border-[var(--white-icon-tr)] bg-[#1414149c] p-6 hover:bg-[var(--white-icon-tr)] transition">
-  <h4 class="text-2xl font-semibold mb-4">Modelado</h4>
+<div class="rounded-2xl border border-[var(--white-icon-tr)] bg-[#1414149c] p-6 transition">
+  <h4 class="text-2xl font-semibold mb-6">Modelado</h4>
 
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
     <Image
       src={modelo1}
       alt="Modelo 1"
-      class="rounded-xl object-cover w-full h-40"
+      class="rounded-xl object-cover w-full h-64"
     />
     <Image
       src={modelo2}
       alt="Modelo 2"
-      class="rounded-xl object-cover w-full h-40"
+      class="rounded-xl object-cover w-full h-64"
     />
     <Image
       src={modelo3}
       alt="Modelo 3"
-      class="rounded-xl object-cover w-full h-40"
+      class="rounded-xl object-cover w-full h-64"
     />
   </div>
 </div>
+
 
 
       <!-- Normalización -->
