--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -60,40 +60,38 @@ const projects: Project[] = [
     <div class="flex flex-col gap-8">
 
       <!-- Modelado -->
-<div class="rounded-2xl border border-[var(--white-icon-tr)] bg-[#1414149c] p-8 transition">
-  <h4 class="text-3xl font-semibold mb-8">Modelado</h4>
+<div class="rounded-2xl border border-white/10 bg-[#141414] p-10">
+  <h4 class="text-4xl font-semibold mb-10">Modelado</h4>
 
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
-  <div class="rounded-2xl bg-[#0f0f0f] p-4 group">
-    <Image
-      src={modelo1}
-      alt="Modelo 1"
-      class="w-full h-auto object-contain transition duration-500 group-hover:scale-105"
-    />
-  </div>
+    <div class="overflow-hidden rounded-3xl group shadow-lg">
+      <Image
+        src={modelo1}
+        alt="Modelo 1"
+        class="w-full h-[500px] object-cover transition duration-500 group-hover:scale-110"
+      />
+    </div>
 
-  <div class="rounded-2xl bg-[#0f0f0f] p-4 group">
-    <Image
-      src={modelo2}
-      alt="Modelo 2"
-      class="w-full h-auto object-contain transition duration-500 group-hover:scale-105"
-    />
-  </div>
+    <div class="overflow-hidden rounded-3xl group shadow-lg">
+      <Image
+        src={modelo2}
+        alt="Modelo 2"
+        class="w-full h-[500px] object-cover transition duration-500 group-hover:scale-110"
+      />
+    </div>
 
-  <div class="rounded-2xl bg-[#0f0f0f] p-4 group">
-    <Image
-      src={modelo3}
-      alt="Modelo 3"
-      class="w-full h-auto object-contain transition duration-500 group-hover:scale-105"
-    />
-  </div>
-
-</div>
-
+    <div class="overflow-hidden rounded-3xl group shadow-lg">
+      <Image
+        src={modelo3}
+        alt="Modelo 3"
+        class="w-full h-[500px] object-cover transition duration-500 group-hover:scale-110"
+      />
+    </div>
 
   </div>
 </div>
+
 
 
 
