--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -53,7 +53,8 @@ const projects: Project[] = [
   id="evidencias"
   class="py-12 border-t border-[#ffffff10] text-[var(--white)]"
 >
-  <div class="max-w-5xl mx-auto">
+  <div class="max-w-7xl mx-auto px-6">
+
     <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Mis</h2>
     <h3 class="text-4xl md:text-5xl font-medium mb-8">Evidencias</h3>
 
