Zoom out modelos

--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -70,7 +70,7 @@ const projects: Project[] = [
       <Image
         src={modelo1}
         alt="Modelo 1"
-        class="w-full h-[500px] object-cover transition duration-500 group-hover:scale-110"
+        class="w-full h-[500px] object-contain scale-90 transition duration-500 group-hover:scale-110"
       />
     </div>
 
@@ -78,7 +78,7 @@ const projects: Project[] = [
       <Image
         src={modelo2}
         alt="Modelo 2"
-        class="w-full h-[500px] object-cover transition duration-500 group-hover:scale-110"
+        class="w-full h-[500px] object-contain scale-90 transition duration-500 group-hover:scale-110"
       />
     </div>
 
@@ -86,7 +86,7 @@ const projects: Project[] = [
       <Image
         src={modelo3}
         alt="Modelo 3"
-        class="w-full h-[500px] object-cover transition duration-500 group-hover:scale-110"
+        class="w-full h-[500px] object-contain scale-90 transition duration-500 group-hover:scale-110"
       />
     </div>
 
