--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -65,30 +65,33 @@ const projects: Project[] = [
   <h4 class="text-4xl font-semibold mb-10">Modelado</h4>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+<div class="flex flex-col md:flex-row gap-6">
 
-    <div class="overflow-hidden rounded-3xl group shadow-lg">
-      <Image
-        src={modelo1}
-        alt="Modelo 1"
-        class="w-full h-[500px] object-contain scale-90 transition duration-500 group-hover:scale-110"
-      />
-    </div>
+  <a 
+    href="/modelo1.drawio.png" 
+    download
+    class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+  >
+    Descargar Modelo 1
+  </a>
 
-    <div class="overflow-hidden rounded-3xl group shadow-lg">
-      <Image
-        src={modelo2}
-        alt="Modelo 2"
-        class="w-full h-[500px] object-contain scale-90 transition duration-500 group-hover:scale-110"
-      />
-    </div>
+  <a 
+    href="/Avion.png" 
+    download
+    class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+  >
+    Descargar Modelo 2
+  </a>
 
-    <div class="overflow-hidden rounded-3xl group shadow-lg">
-      <Image
-        src={modelo3}
-        alt="Modelo 3"
-        class="w-full h-[500px] object-contain scale-90 transition duration-500 group-hover:scale-110"
-      />
-    </div>
+  <a 
+    href="/biblioteca.png" 
+    download
+    class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+  >
+    Descargar Modelo 3
+  </a>
+
+</div>
 
   </div>
 </div>
