--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -68,28 +68,28 @@ const projects: Project[] = [
 <div class="flex flex-col md:flex-row gap-6">
 
   <a 
-    href="/modelo1.drawio.png" 
-    download
-    class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
-  >
-    Descargar Modelo 1
-  </a>
+  href={`${import.meta.env.BASE_URL}modelo1.drawio.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 1
+</a>
 
-  <a 
-    href="/Avion.png" 
-    download
-    class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
-  >
-    Descargar Modelo 2
-  </a>
+<a 
+  href={`${import.meta.env.BASE_URL}Avion.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 2
+</a>
 
-  <a 
-    href="/biblioteca.png" 
-    download
-    class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
-  >
-    Descargar Modelo 3
-  </a>
+<a 
+  href={`${import.meta.env.BASE_URL}biblioteca.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 3
+</a>
 
 </div>
 
