--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -68,7 +68,7 @@ const projects: Project[] = [
 <div class="flex flex-col md:flex-row gap-6">
 
   <a 
-  href={`${import.meta.env.BASE_URL}modelo1.drawio.png`} 
+  href={`${import.meta.env.BASE_URL}/modelo1.drawio.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -76,7 +76,7 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}Avion.png`} 
+  href={`${import.meta.env.BASE_URL}/Avion.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -84,7 +84,7 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}biblioteca.png`} 
+  href={`${import.meta.env.BASE_URL}/biblioteca.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
