--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -91,6 +91,30 @@ const projects: Project[] = [
   Descargar Modelo 3
 </a>
 
+<a 
+  href={`${import.meta.env.BASE_URL}/diagrama4.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 4
+</a>
+
+<a 
+  href={`${import.meta.env.BASE_URL}/diagrama5.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 5
+</a>
+
+<a 
+  href={`${import.meta.env.BASE_URL}/diagrama6.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 6
+</a>
+
 </div>
 
   </div>
