Nuevos modelos subidos

--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -68,7 +68,7 @@ const projects: Project[] = [
 <div class="flex flex-col md:flex-row gap-6">
 
   <a 
-  href={`${import.meta.env.BASE_URL}/modelo1.drawio.png`} 
+  href={`${import.meta.env.BASE_URL}/Modelo1.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -76,7 +76,7 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}/Avion.png`} 
+  href={`${import.meta.env.BASE_URL}/Modelo2.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -84,7 +84,7 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}/biblioteca.png`} 
+  href={`${import.meta.env.BASE_URL}/Modelo3.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -92,7 +92,7 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}/diagrama4.png`} 
+  href={`${import.meta.env.BASE_URL}/Modelo4.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -100,7 +100,7 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}/diagrama5.png`} 
+  href={`${import.meta.env.BASE_URL}/Modelo5.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
@@ -108,11 +108,43 @@ const projects: Project[] = [
 </a>
 
 <a 
-  href={`${import.meta.env.BASE_URL}/diagrama6.png`} 
+  href={`${import.meta.env.BASE_URL}/Modelo6.png`} 
   download
   class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
 >
   Descargar Modelo 6
+</a>
+
+<a 
+  href={`${import.meta.env.BASE_URL}/Modelo7.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 7
+</a>
+
+<a 
+  href={`${import.meta.env.BASE_URL}/Modelo8.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 8
+</a>
+
+<a 
+  href={`${import.meta.env.BASE_URL}/Modelo9.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 9
+</a>
+
+<a 
+  href={`${import.meta.env.BASE_URL}/Modelo10.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 10
 </a>
 
 </div>
