--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -147,6 +147,14 @@ const projects: Project[] = [
   Descargar Modelo 10
 </a>
 
+<a 
+  href={`${import.meta.env.BASE_URL}/Modelo11y12.png`} 
+  download
+  class="px-6 py-4 rounded-xl bg-white text-black font-medium hover:scale-105 transition"
+>
+  Descargar Modelo 11 y 12
+</a>
+
 </div>
 
   </div>
