--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -65,7 +65,7 @@ const projects: Project[] = [
   <h4 class="text-4xl font-semibold mb-10">Modelado</h4>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-<div class="flex flex-col md:flex-row gap-6">
+<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6">
 
   <a 
   href={`${import.meta.env.BASE_URL}/Modelo1.png`} 
